# makepad

draw/src/shader/: draw_text.rs
examples/simple/: Cargo.toml
examples/simple/src/: app.rs  draw_game.rs  game_view.rs  lib.rs  model.rs  other.rs  render.rs
platform/src/: lib.rs
widgets/src/: button.rs  image_cache.rs  view.rs
